--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,4 +7,18 @@
         <servlet-name>Servlet</servlet-name>
         <servlet-class>com.jingdong.Servlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>Servlet</servlet-name>
+        <url-pattern>/shop.do</url-pattern>
+        <url-pattern>/Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>CheckUserServlet</servlet-name>
+        <servlet-class>com.jingdong.CheckUserServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CheckUserServlet</servlet-name>
+        <url-pattern>/CheckUser.do</url-pattern>
+        <url-pattern>/CheckUserServlet</url-pattern>
+    </servlet-mapping>
 </web-app>
